syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "DawnQuant.AShare.Api.UserProfile";

package DawnQuant.AShare.Api.UserProfile;



message SelfSelectStockDto{
         int64 Id =1;
         string TSCode =2;
         int64 UserId =3;
         int64 CategoryId =4;
         string Name =5;
         string Industry =6;
         int32 SortNum =7;
         google.protobuf.Timestamp CreateTime=8 ;
}


message SelfSelectStockCategoryDto{
     int64 Id=1;
     int64 UserId =2;
     int32 SortNum =3;
     string Name =4;
     string  Desc =5;
     bool IsGroupByIndustry=6;
     int32 StockSortFiled=7;
     repeated SelfSelectStockDto SelfSelectStocks=8;
     google.protobuf.Timestamp CreateTime=9 ;
}

message BellwetherStockCategoryDto{
     int64 Id=1;
     int64 UserId =2;
     int32 SortNum =3;
     string Name =4;
     string  Desc =5;
     repeated BellwetherStockDto BellwetherStocks=6;
     google.protobuf.Timestamp CreateTime=7 ;
}

message BellwetherStockDto{
         int64 Id =1;
         string TSCode =2;
         int64 UserId =3;
         int64 CategoryId =4;
         string Name =5;
         int32 SortNum =6;
         google.protobuf.Timestamp CreateTime=7 ;

}


message SubjectAndHotStockDto{
         int64 Id =1;
         string TSCode =2;
         int64 UserId =3;
         int64 CategoryId =4;
         string Name =5;
         string Industry =6;
         int32 SortNum =7;
         google.protobuf.Timestamp CreateTime=8 ;
}


message SubjectAndHotStockCategoryDto{
     int64 Id=1;
     int64 UserId =2;
     int32 SortNum =3;
     string Name =4;
     string  Desc =5;
     repeated SubjectAndHotStockDto SubjectAndHotStocks=6;
     google.protobuf.Timestamp CreateTime=7 ;
}

message StockStrategyDto{
         int64 Id =1;
         int64 UserId =2;
         string  Name =3;
         int64 CategoryId =4;
         string Desc =5;
         int32 SortNum =6;
         string StockStragyContent =7;
         google.protobuf.Timestamp CreateTime=8 ;
}

message StockStrategyCategoryDto{

     int64 Id=1;
     int64 UserId =2;
     int32 SortNum =3;
     string Name =4;
     string Desc =5;
     repeated StockStrategyDto  StockStrategies=6;
     google.protobuf.Timestamp CreateTime=7 ;
}


